# AMQP-CPP

./: CMakeLists.txt  README.debian
include/: array.h  channelimpl.h  connectionhandler.h  connectionimpl.h  decimalfield.h  deferredconsumer.h  endian.h  table.h
src/: basiccancelframe.h  channelimpl.cpp  connectionstartframe.h  deferredconsumer.cpp
